[WFLY-22191] Duplicate some of the WildFly Core script tests in the full WF testsuite