@@ -24,10 +24,12 @@ import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.function.BooleanSupplier;
 import java.util.function.Supplier;
+import java.util.logging.Logger;
 import javax.json.Json;
 import javax.json.JsonObject;
 import javax.json.JsonReader;
 
+import org.jboss.as.controller.PathAddress;
 import org.jboss.as.controller.client.ModelControllerClient;
 import org.jboss.as.controller.client.Operation;
 import org.jboss.as.controller.client.OperationMessageHandler;
@@ -45,12 +47,27 @@ import org.junit.Assert;
  * @author <a href="mailto:jperkins@redhat.com">James R. Perkins</a>
  */
 public class ServerHelper {
+
+    private static final Logger logger = Logger.getLogger(ServerHelper.class.getName());
+
     public static final ModelNode EMPTY_ADDRESS = new ModelNode().setEmptyList();
     public static final int TIMEOUT = TimeoutUtil.adjust(Integer.parseInt(System.getProperty("jboss.test.start.timeout", "15")));
     public static final Path JBOSS_HOME;
     public static final String[] DEFAULT_SERVER_JAVA_OPTS = {
             "-Djboss.management.http.port=" + TestSuiteEnvironment.getServerPort(),
             "-Djboss.bind.address.management=" + TestSuiteEnvironment.getServerAddress(),
+    };
+
+    /**
+     * Strings we expect to find in input arguments. This is far from a complete list;
+     * it's meant to be used as a simple smoke test. If our scripts no longer produce one
+     * of these, it's fine to edit and replace it with something else.
+     */
+    public static final String[] DEFAULT_EXPECTED_INPUT_ARGS = {
+            "--add-opens=java.base/java.lang=ALL-UNNAMED", // basic thing unlikely to be removed
+            "--add-exports=java.desktop/sun.awt=ALL-UNNAMED", // as of Aug 2026, the first modular arg
+            "--add-opens=java.naming/javax.naming=ALL-UNNAMED", // as of Aug 2026 the last modular arg
+            "jdk.serialFilter" // in one way or another we'll do a JEPS 290 global config with a command using this string
     };
 
     static {
@@ -87,15 +104,25 @@ public class ServerHelper {
      */
     public static boolean isStandaloneRunning(final ModelControllerClient client) {
         try {
-            final ModelNode response = client.execute(Operations.createReadAttributeOperation(EMPTY_ADDRESS, "server-state"));
+            ModelNode response = client.execute(Operations.createReadAttributeOperation(EMPTY_ADDRESS, "server-state"));
             if (Operations.isSuccessfulOutcome(response)) {
                 final String state = Operations.readResult(response).asString();
-                return !CONTROLLER_PROCESS_STATE_STARTING.equals(state)
-                        && !CONTROLLER_PROCESS_STATE_STOPPING.equals(state);
+                if (CONTROLLER_PROCESS_STATE_STARTING.equals(state)
+                        || CONTROLLER_PROCESS_STATE_STOPPING.equals(state)) {
+                    logger.severe("Server server-state check failed -- " + response);
+                    return false;
+                }
+            } else {
+                logger.severe("Server status check failed -- " + response);
+                return false;
             }
-        } catch (RuntimeException | IOException ignore) {
+
+            return true;
+        } catch (RuntimeException | IOException toLog) {
+            logger.severe("Server status check failed -- " + toLog);
+            return false;
         }
-        return false;
+
     }
 
     /**
@@ -145,25 +172,41 @@ public class ServerHelper {
             final Operations.CompositeOperationBuilder builder = Operations.CompositeOperationBuilder.create()
                     .addStep(Operations.createReadAttributeOperation(hostAddress, "running-mode"))
                     .addStep(Operations.createReadAttributeOperation(hostAddress, "host-state"));
+
             ModelNode response = domainClient.execute(builder.build());
-            if (Operations.isSuccessfulOutcome(response)) {
-                response = Operations.readResult(response);
-                if ("ADMIN_ONLY".equals(Operations.readResult(response.get("step-1")).asString())) {
-                    if (Operations.isSuccessfulOutcome(response.get("step-2"))) {
-                        final String state = Operations.readResult(response).asString();
-                        return !CONTROLLER_PROCESS_STATE_STARTING.equals(state)
-                                && !CONTROLLER_PROCESS_STATE_STOPPING.equals(state);
+            if (!Operations.isSuccessfulOutcome(response)) {
+                logger.severe("HostController status check failed -- " + response);
+                return false;
+            }
+
+            ModelNode result = Operations.readResult(response);
+
+            // If we're admin-only we should be fully started by now, so check we are.
+            // With servers, maybe not, so we don't check
+            if ("ADMIN_ONLY".equals(Operations.readResult(result.get("step-1")).asString())) {
+                ModelNode step2Response = result.get("step-2");
+                if (Operations.isSuccessfulOutcome(step2Response)) {  // todo wouldn't this always be true if the overall op succeeded?
+                    final String state = Operations.readResult(step2Response).asString();
+                    boolean started = !CONTROLLER_PROCESS_STATE_STARTING.equals(state)
+                            && !CONTROLLER_PROCESS_STATE_STOPPING.equals(state);
+                    if (!started) {
+                        logger.severe("HostController host-state is invalid: " + state);
                     }
+                    return started;
+                } else {
+                    logger.severe("HostController host-state check failed -- " + response);
+                    return false;
                 }
             }
+
             final Map<ServerIdentity, ServerStatus> servers = new HashMap<>();
             final Map<ServerIdentity, ServerStatus> statuses = domainClient.getServerStatuses();
-            for (Map.Entry<ServerIdentity, ServerStatus> entry : statuses.entrySet()) {
-                final ServerStatus status = entry.getValue();
+            for (ServerIdentity id : statuses.keySet()) {
+                final ServerStatus status = statuses.get(id);
                 switch (status) {
                     case DISABLED:
                     case STARTED: {
-                        servers.put(entry.getKey(), status);
+                        servers.put(id, status);
                         break;
                     }
                 }
@@ -290,6 +333,50 @@ public class ServerHelper {
             return Operations.readResult(response).asString();
         }
         throw new IOException("Failed to determine host name: " + Operations.readResult(response).asString());
+    }
+
+    /**
+     * Checks that the core-service=management resource's read-boot-errors op returns no errors.
+     * @param client the client to connect to the target process.
+     * @param baseAddress base address under which the core-service=management resource can be found.
+     */
+    public static void checkBootErrors(final ModelControllerClient client, PathAddress baseAddress) {
+
+        final ModelNode bootErrorAddress = baseAddress.append("core-service", "management").toModelNode();
+        try {
+            ModelNode response = client.execute(Operations.createOperation("read-boot-errors", bootErrorAddress));
+            Assert.assertTrue("Server read-boot-errors failed -- " + response,
+                    Operations.isSuccessfulOutcome(response));
+            final ModelNode errors = Operations.readResult(response);
+            Assert.assertTrue("Server has boot errors -- " + response,
+                    !errors.isDefined() || errors.asList().isEmpty());
+        } catch (RuntimeException | IOException toLog) {
+            Assert.fail("Server read-boot-errors failed -- " + toLog);
+        }
+    }
+
+    /**
+     * Checks whether the {@code input-arguments} attribute from the management API's resource for the RuntimeMXBean
+     * includes all the expected strings.
+     * @param client the client to connect to the target process.
+     * @param baseAddress base address under which the platform mbean resource can be found.
+     * @param expectedArgs the expected arguments
+     */
+    public static void checkInputArgs(final ModelControllerClient client, PathAddress baseAddress, String... expectedArgs) {
+
+        final ModelNode runtimeMBeanAddress = baseAddress.append("core-service", "platform-mbean")
+                .append("type", "runtime").toModelNode();
+        try {
+            ModelNode response = client.execute(Operations.createReadAttributeOperation(runtimeMBeanAddress, "input-arguments"));
+            Assert.assertTrue("input-args check failed -- " + response, Operations.isSuccessfulOutcome(response));
+            final String inputArgs = Operations.readResult(response).asString();
+            for (String expectedArg : expectedArgs) {
+                Assert.assertTrue("input-args do not contain " + expectedArg + " -- " + response,
+                        inputArgs.contains(expectedArg));
+            }
+        } catch (RuntimeException | IOException e) {
+            Assert.fail("input-args check failed -- " + e);
+        }
     }
 
     private static boolean isNullOrEmpty(final String value) {
